(4.2.5p154) 2009/01/13 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 992] support interface event change on Linux from
  Miroslav Lichvar.
(4.2.5p153) 2009/01/09 Released by Harlan Stenn <stenn@ntp.org>
* Renamed gsoc_sntp/:fetch-stubs to gsoc_sntp/fetch-stubs to avoid
  file name problems under Windows.
  Removed German umlaut from log msg for 4.2.5p142.
(4.2.5p152) 2009/01/08 Released by Harlan Stenn <stenn@ntp.org>
* Include (4.2.4p6) 2009/01/08 Released by Harlan Stenn <stenn@ntp.org>
(4.2.5p151) 2008/12/23 Released by Harlan Stenn <stenn@ntp.org>
* Stats file logging cleanup from Dave Mills.
(4.2.5p150) 2008/12/15 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1099] Fixed wrong behaviour in sntp's crypto.c.
* [Bug 1103] Fix 64-bit issues in the new calendar code.
(4.2.5p149) 2008/12/05 Released by Harlan Stenn <stenn@ntp.org>
* Fixed mismatches in data types and OID definitions in ntpSnmpSubAgent.c
* added a premliminary MIB file to ntpsnmpd (ntpv4-mib.mib)
(4.2.5p148) 2008/12/04 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1070] Fix use of ntpq_parsestring() in ntpsnmpd.
(4.2.5p147) 2008/11/27 Released by Harlan Stenn <stenn@ntp.org>
* Update gsoc_sntp's GCC warning code.
(4.2.5p146) 2008/11/26 Released by Harlan Stenn <stenn@ntp.org>
* Update Solaris CFLAGS for gsoc_sntp.
(4.2.5p145) 2008/11/20 Released by Harlan Stenn <stenn@ntp.org>
* Deal with time.h for sntp under linux.
* Provide rpl_malloc() for sntp for systems that need it.
* Handle ss_len and socklen type for sntp.
* Fixes to the sntp configure.ac script.
* Provide INET6_ADDRSTRLEN if it is missing.
* [Bug 1095] overflow in caljulian.c.
(4.2.5p144) 2008/11/19 Released by Harlan Stenn <stenn@ntp.org>
* Use int32, not int32_t.
* Avoid the sched*() functions under OSF - link problems.
(4.2.5p143) 2008/11/17 Released by Harlan Stenn <stenn@ntp.org>
* sntp cleanup and fixes.
(4.2.5p142) 2008/11/16 Released by Harlan Stenn <stenn@ntp.org>
* Imported GSoC SNTP code from Johannes Maximilian Kuehn.